# slap42

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  release.py
res/shaders/: entity_shader.frag.glsl  entity_shader.vert.glsl  scenery_shader.frag.glsl  scenery_shader.vert.glsl  terrain_shader.frag.glsl  terrain_shader.vert.glsl
src/: main.cpp
src/slap42/: main.cpp
src/slap42/graphics/: camera.cpp  camera.hpp  gl_check.cpp  gl_check.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_array.cpp  texture_array.hpp
src/slap42/graphics/meshes/: entity_mesh.cpp  entity_mesh.hpp  mesh.cpp  mesh.hpp  scenery_mesh.cpp  scenery_mesh.hpp  terrain_mesh.cpp  terrain_mesh.hpp
src/slap42/graphics/shaders/: entity_shader.cpp  entity_shader.hpp  scenery_shader.cpp  scenery_shader.hpp  shader.cpp  shader.hpp  terrain_shader.cpp  terrain_shader.hpp
src/slap42/hud_panels/: chat_panel.cpp  chat_panel.hpp  server_panel.cpp  server_panel.hpp
src/slap42/level/: chunk.cpp  chunk.hpp  level.cpp  level.hpp  noise.cpp  noise.hpp
src/slap42/level/meshgen/: procedural_terrain.cpp  procedural_terrain.hpp  procedural_tree.cpp  procedural_tree.hpp  raw_mesh.hpp
src/slap42/menus/: connected_players_menu.cpp  connected_players_menu.hpp  error_menu.cpp  error_menu.hpp  host_error_menu.cpp  host_error_menu.hpp  host_join_menu.cpp  host_join_menu.hpp  host_menu.cpp  host_menu.hpp  join_async_menu.cpp  join_async_menu.hpp  join_error_menu.cpp  join_error_menu.hpp  join_menu.cpp  join_menu.hpp  menu_state.hpp  menu_state_machine.cpp  menu_state_machine.hpp  pause_menu.cpp  pause_menu.hpp
src/slap42/networking/: client.cpp  client.hpp  disconnect_reasons.hpp  message_serializer.hpp  message_types.hpp  peer_data.hpp  server.cpp  server.hpp
src/slap42/networking/client/: client.cpp  client.hpp  client_data.cpp  client_data.hpp  client_message_handler.cpp  client_message_handler.hpp
src/slap42/networking/server/: server.cpp  server.hpp  server_data.cpp  server_data.hpp  server_message_handler.cpp  server_message_handler.hpp
src/slap42/terrain/: chunk.cpp  chunk.hpp
src/slap42/utils/: hash.hpp  hostname_port_validation.cpp  hostname_port_validation.hpp  random.cpp  random.hpp  stoi_wrapper.cpp  stoi_wrapper.hpp
src/slap42/window/: controls.cpp  controls.hpp  window.cpp  window.hpp
